css/style.css
/* ... */
  
 
.newsletter .primary-btn:after {
    position: absolute;
    content: "";
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    border-radius: 20px;
    transition: all 0.3s ease-in-out;
    z-index: 1;
    background-image: -moz-linear-gradient(135deg, #a387ff 0%, #91d1ff 100%);
    background-image: -webkit-linear-gradient(135deg, #a387ff 0%, #91d1ff 100%);
    background-image: -ms-linear-gradient(135deg, #a387ff 0%, #91d1ff 100%);
    -ms-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
}
.newsletter .primary-btn span{
      z-index: 3;
}
.newsletter .primary-btn:focus:after , .newsletter .primary-btn:hover:after {
  background-image: -moz-linear-gradient(100deg, #a387ff 10%, #91d1ff 70%);
  background-image: -webkit-linear-gradient(100deg, #a387ff 10%, #91d1ff 70%);
  background-image: -ms-linear-gradient(100deg, #a387ff 10%, #91d1ff 70%);
}

@media (max-width: 767px) {
    .newsletter input {
      padding: 0 25px;
    }
    .newsletter .primary-btn {
      position: relative;
      margin-top: 10px;
      right: 0;
      bottom: 0;
    }
}

.recent-trends .trend .img{
    height: 300px;
    width: 650px;
    background-position: center;
    background-size: cover;
}


/* profile animation */

.profile-container.pre-enter {
    transform-origin: center center;
    transform: scaleY(0);
  }
  .profile-container.pre-enter .user-img {
    transform-origin: center top;
    transform: scaleY(0);
  }
  .profile-container.pre-enter h2,
  .profile-container.pre-enter a.follow,
  .profile-container.pre-enter a.link {
    opacity: 0;
    transform: translateY(500px);
  }
  .profile-container.on-enter {
    -webkit-animation: scaleYIn 1000ms ease-out forwards;
            animation: scaleYIn 1000ms ease-out forwards;
  }
  .profile-container.on-enter .user-img {
    -webkit-animation: scaleYIn-small 750ms ease-out forwards 1000ms;
            animation: scaleYIn-small 750ms ease-out forwards 1000ms;
  }
  .profile-container.on-enter h2,
  .profile-container.on-enter a.follow,
  .profile-container.on-enter a.link {
    opacity: 1;
    -webkit-animation: slideInUp 1000ms ease-out forwards;
            animation: slideInUp 1000ms ease-out forwards;
  }
  .profile-container.on-enter h2 {
    -webkit-animation-delay: 1100ms;
            animation-delay: 1100ms;
  }
  .profile-container.on-enter a.follow {
    -webkit-animation-delay: 1250ms;
            animation-delay: 1250ms;
  }
  .user-img {
    clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%);
  }
   .work {
    background: #f5515f;
    background: linear-gradient(135deg, #f5825f 0%, #f5005f 100%);
  }
  a.follow {
    background: #05abe0;
    background: linear-gradient(135deg, #05c8e0 0%, #057fe0 100%);
  }
  a.follow:hover, a.follow:focus {
    background: #05c8e0;
    background: linear-gradient(135deg, #1ee2fa 0%, #1e99fa 100%);
  }
  a.follow:active {
    background: #057fe0;
    background: linear-gradient(135deg, #04b2c7 0%, #0471c7 100%);
  }
  
  @media only screen and (min-width: 470px) {
    .profile-container.pre-enter {
      transform: scaleX(0);
    }
    .profile-container.pre-enter .user-img {
      transform-origin: left center;
      transform: scaleX(0);
    }
    .profile-container.pre-enter h2,
    .profile-container.pre-enter a.follow,
    .profile-container.pre-enter a.link {
      transform: translateX(500px);
    }
    .profile-container.on-enter {
      -webkit-animation-name: scaleXIn;
              animation-name: scaleXIn;
    }
    .profile-container.on-enter .user-img {
      -webkit-animation-name: scaleXIn-small;
              animation-name: scaleXIn-small;
    }
    .profile-container.on-enter h2,
    .profile-container.on-enter a.follow,
    .profile-container.on-enter a.link {
      -webkit-animation-name: slideInLeft;
              animation-name: slideInLeft;
    }
  
}

.profile-container{
    height: 400px;
}

@media (max-width: 768px) {
    .profile-container{
        height: auto !important;
    }
    .profile-container .img-container{
        height: 250px !important;
    }
    .profile-container .user-img{
        border-radius: 50% !important;
        clip-path: none;
        width: 250px;
        height: 250px;
        margin: 0 auto;
        -webkit-border-radius: 50% !important;
        -moz-border-radius: 50% !important;
        -ms-border-radius: 50% !important;
        -o-border-radius: 50% !important;
}
 }

  /* https://goo.gl/jIUq3E */
  @keyframes scaleXIn {
    0% {
      transform: matrix3d(0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    4.7% {
      transform: matrix3d(0.45, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    9.41% {
      transform: matrix3d(0.883, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    14.11% {
      transform: matrix3d(1.141, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    18.72% {
      transform: matrix3d(1.212, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    24.32% {
      transform: matrix3d(1.151, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    29.93% {
      transform: matrix3d(1.048, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    35.54% {
      transform: matrix3d(0.979, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    41.04% {
      transform: matrix3d(0.961, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    52.15% {
      transform: matrix3d(0.991, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    63.26% {
      transform: matrix3d(1.007, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    85.49% {
      transform: matrix3d(0.999, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
    100% {
      transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
    }
  }
/* ... */

